--- a/examples/semiconductor/expert-program-space.yml
+++ b/examples/semiconductor/expert-program-space.yml
@@ -3,58 +3,7 @@ plan:
     Develop a comprehensive plan for etching 2 μm PECVD SiO2 using a PR mask.
   sub-htps:
     - task: |-
-        How can you introduce the etching challenges?
-      sub-htps:
-        - task: |-
-            What are the challenges of etching 2 μm PECVD SiO2 using a PR mask?
-        - task: |-
-            How can you mention the use of the Oxford ICP-RIE Plasmalab System 100 and the encountered issues?
+        What are the indicators I should focus on and briefly tell me their influence? Tell me concisely.
 
     - task: |-
-        What general considerations should be discussed?
-      sub-htps:
-        - task: |-
-            Why is selectivity important in the etching process?
-        - task: |-
-            How does polymer redeposition affect the etching process?
-        - task: |-
-            Why is the etch rate a critical factor in the etching process?
-
-    - task: |-
-        What recipe suggestions can be presented?
-      sub-htps:
-        - task: |-
-            How can you present fluorine-based recipe options?
-          sub-htps:
-            - task: |-
-                What are the detailed parameters for the fluorine-based recipe, including gas flow rates, power, pressure, and temperature?
-        - task: |-
-            How can you present chlorine-based recipe options?
-          sub-htps:
-            - task: |-
-                What are the detailed parameters for the chlorine-based recipe, including gas flow rates, power, pressure, and temperature?
-        - task: |-
-            How can you present hybrid recipe options?
-          sub-htps:
-            - task: |-
-                What are the detailed parameters for the hybrid recipe, including gas flow rates, power, pressure, and temperature?
-
-    - task: |-
-        What additional tips can optimize the etching process?
-      sub-htps:
-        - task: |-
-            How can PR mask optimization improve the etching process?
-        - task: |-
-            Why is it important to monitor the etch process?
-        - task: |-
-            What pre-etch and post-etch treatments should be performed?
-
-    - task: |-
-        How can you conclude the plan?
-      sub-htps:
-        - task: |-
-            How can you recap the key points?
-        - task: |-
-            Why is it important to follow safety guidelines and operating procedures?
-        - task: |-
-            Why should you start with low-power, low-bias conditions and gradually adjust as needed?
+        What are the range of values should I choose for each indicator? No need so say much. I want the safe range of value.
