--- a/examples/semiconductor/semiconductor-ui/api/Dockerfile
+++ b/examples/semiconductor/semiconductor-ui/api/Dockerfile
@@ -1,6 +1,7 @@
-FROM --platform=linux/amd64 python:3.10-slim AS base
+FROM --platform=linux/amd64 python:3.12-slim AS base
 
 # Install Poetry
+RUN apt update -y && apt upgrade -y && apt install git -y
 RUN apt update -y && apt install poppler-utils -y
 RUN python -m pip install --upgrade pip && \
     pip install --no-cache-dir poetry==1.3.2
@@ -11,14 +12,14 @@ RUN poetry config virtualenvs.in-project true && \
 
 WORKDIR /api
 
-COPY pyproject.toml /api/
+COPY pyproject.toml poetry.lock /api/
 
 # =======================================
 # Build image
 FROM base AS build
-
+ENV POETRY_REQUESTS_TIMEOUT=300
+ENV PIP_DEFAULT_TIMEOUT=300
 RUN poetry install
-
 
 # =======================================
 # App image
