--- a/examples/semiconductor/semiconductor-ui/ui/package.json
+++ b/examples/semiconductor/semiconductor-ui/ui/package.json
@@ -11,9 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "axios": "^1.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
