--- a/examples/semiconductor/semiconductor-ui/api/expert-program-space.yml
+++ b/examples/semiconductor/semiconductor-ui/api/expert-program-space.yml
@@ -1,17 +1,12 @@
 plan:
   task: |-
     For etching PECVD SiO2 using Inductively Coupled Plasma (ICP) Reactive Ion Etching (RIE),
-    recommend 2 good parameter sets and their relative advantages/disadvantages
+    recommend 2 good parameter sets and their relative advantages/disadvantages. 
+    Also give me recommendation about quality and safety of the process.
+    Keep the answer concise.
   
   sub-htps:
     - task: |-
-        Get typical gases used for such process and their flow rate ranges
-        in SiO2 etching using Inductively Coupled Plasma (ICP) Reactive Ion Etching (RIE)
-        
-    - task: |-    
-        Get typical ICP Power, RF Power and Pressure value ranges and associated trade-offs
-        in SiO2 etching using Inductively Coupled Plasma (ICP) Reactive Ion Etching (RIE)
-
-    - task: |-
-        Recommend 2 parameter sets (each including Flow Rate for each Gas, plus ICP Power, RF Power and Pressure)
-        with analysis of their relative pros and cons.
+        Get typical gases used for such process and their flow rate ranges, ICP Power, RF Power and Pressure value 
+        ranges and associated trade-offs in SiO2 etching using Inductively Coupled Plasma (ICP) Reactive Ion 
+        Etching (RIE). Keep the answer as concise as possible.
