iac demo -halfway

--- a/examples/semiconductor/expert-program-space.yml
+++ b/examples/semiconductor/expert-program-space.yml
@@ -37,10 +37,10 @@ plan:
         - Safety considerations
 
 plan:
-    task: |-
+  task: |-
     Formulate a recipe for Chemical Mechanical Polishing (CMP) process
-
-    sub-htps:
+    
+  sub-htps:
     - task: |-
         Perform pre-CMP wafer cleaning and preparation
 
@@ -61,3 +61,49 @@ plan:
 
     - task: |-
         Ensure safety and environmental compliance
+
+plan:
+  task: |-
+    Develop and implement an enhanced post-CMP (Chemical Mechanical Polishing) cleaning process for advanced geometries below 10nm to ensure optimal device performance and yield.
+
+  sub-htps:
+    - task: |-
+        Address residual defect and contaminant removal:
+        - Implement enhanced cleaning steps to remove micro-scratches, particles, and chemical residues left by CMP, focusing on sub-10nm scales.
+
+    - task: |-
+        Reduce particle contamination:
+        - Develop advanced cleaning protocols to minimize particle density and reduce the risk of particle-induced defects.
+
+    - task: |-
+        Improve surface passivation and interface quality:
+        - Incorporate additional cleaning steps to enhance interfacial layer quality, crucial for maintaining device integrity and performance in advanced semiconductor devices.
+
+    - task: |-
+        Prevent metal and dielectric defects:
+        - Employ supplementary cleaning techniques to remove impurities and ensure pristine surfaces for material deposition, critical for nanoscale dimensions.
+
+    - task: |-
+        Reduce metal line roughness:
+        - Utilize specialized chemistries or plasma-based treatments post-CMP to smoothen metal lines and improve device reliability in advanced nodes.
+
+    - task: |-
+        Implement recommended additional post-CMP cleaning steps:
+        - Wet Chemical Cleaning: Use HF, H2SO4, and HCl to remove metal residues and organic particles, followed by DI water rinse and nitrogen drying.
+        - Plasma-Based Cleaning: Use plasma ashing or remote plasma cleaning with O2, Ar, or a combination to remove stubborn contaminants.
+        - Vapor Phase Cleaning: Apply vapor-phase techniques using O3, vapor-phase HF, or fluorine-based gas chemistries to selectively remove impurities.
+        - Dry and Supercritical Fluid Cleaning: Employ cryogenic aerosol cleaning, carbon dioxide snow cleaning, or supercritical fluids to clean particles without additional water or chemicals.
+        - Physical Cleaning: Use gentle mechanical methods like brushing or scrubbing to remove large particles while avoiding new defects.
+        - Surface Passivation: Apply PECVD or ALD to deposit thin dielectric layers like silicon oxide or nitride for surface passivation.
+        - In-Situ Monitoring and Control: Integrate real-time monitoring tools (e.g., spectroscopic ellipsometry, scatterometry, XPS) to optimize cleaning parameters.
+
+    - task: |-
+        Consider implementation factors:
+        - Ensure chemical compatibility of cleaning agents and processes with device materials.
+        - Optimize cleaning steps to target specific contaminants while preserving sensitive device structures.
+        - Integrate additional cleaning steps into existing process flows and toolsets to minimize disruptions.
+        - Continuously monitor and fine-tune cleaning parameters (chemical concentrations, temperature, time) for optimal results.
+
+    - task: |-
+        Monitor outcomes:
+        - Evaluate the effectiveness of the enhanced cleaning process in reducing defect densities, improving device performance, and enhancing overall yield for advanced geometries below 10nm.
