--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,7 @@ streamlit-extras = {version = ">=0.4", optional = true}
 streamlit-mic-recorder = {version = ">=0.0.8", optional = true}
 
 langchainhub = ">=0.1"
+faiss-cpu = ">=1.8"
 
 [tool.poetry.extras]
 contrib = [
@@ -110,6 +111,7 @@ contrib = [
 
 langchain = [
   "langchainhub",
+  "faiss-cpu",
 ]
 
 
