--- a/examples/semiconductor/semiconductor-ui/ui/package.json
+++ b/examples/semiconductor/semiconductor-ui/ui/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "axios": "^1.7.3",
+    "lucide-react": "^0.438.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
