update examples/FinanceBench financebench_id_01935 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -769,7 +769,9 @@ financebench_id_01935:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer mentions supplemental indentures related to debt
+    the answer mentions indenture(s)
+
+  evaluator-unreliable: true
 
 
 financebench_id_00799:
