update examples/FinanceBench financebench_id_00476 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1230,6 +1230,8 @@ financebench_id_00476:
     the answer concludes that there are no debt securities traded,
     or, alternatively, that no such debt securities are explicitly reported
 
+  evaluator-unreliable: true
+
 
 financebench_id_01028:
   sector: Financials
