update examples/FinanceBench financebench_id_00651 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -2784,7 +2784,7 @@ financebench_id_00711:
   evaluator-unreliable: true
 
 
-financebench_id_00651:
+financebench_id_00651:  # TODO: retrieve growth rates
   sector: Health Care
 
   company: Johnson & Johnson
