update examples/FinanceBench financebench_id_00678 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1918,7 +1918,7 @@ financebench_id_01091:
   evaluator-unreliable: true
 
 
-financebench_id_00678:  # tricky: Gross Income is implicit, with missing label
+financebench_id_00678:  # note: Gross Income is implicit, with missing label
   sector: Industrials
 
   company: Boeing
