update examples/FinanceBench financebench_id_02416 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -4098,7 +4098,7 @@ financebench_id_02416:  # note: Therachon is mentioned on separate following pag
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer mentions Arena and Trillium
+    the answer mentions Trillium and Array
 
 
 financebench_id_00283:
