update PyLint linting configs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -136,6 +136,7 @@ disable = [
   "missing-class-docstring",
   "missing-function-docstring",
   "missing-module-docstring",
+  "no-name-in-module",
   "raw-checker-failed",
   "redefined-outer-name",
   "relative-beyond-top-level",
