--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ maintainers = [
   "Sang Dinh <sang@aitomatic.com>",
   "Quynh Le <quynh@aitomatic.com>",
   "Shruti Raghavan <shruti@aitomatic.com>",
+  "William Nguyen <william@aitomatic.com>",
   "Zooey Nguyen <zooey@aitomatic.com>",
 ]
 
