--- a/pyproject.toml
+++ b/pyproject.toml
@@ -140,6 +140,7 @@ disable = [
   "redefined-outer-name",
   "relative-beyond-top-level",
   "too-few-public-methods",
+  "too-many-positional-arguments",
   "unnecessary-pass",
 ]
 
