rename examples/FinanceBench/dana module

--- a/examples/FinanceBench/Makefile
+++ b/examples/FinanceBench/Makefile
@@ -1,36 +1,36 @@
 agent-solve:
-	@poetry run python htp_oodar_agent.py ${id}
+	@poetry run python dana.py ${id}
 
 agent-solve-w-knowledge:
-	@poetry run python htp_oodar_agent.py ${id} --knowledge
+	@poetry run python dana.py ${id} --knowledge
 
 agent-solve-w-prog-store:
-	@poetry run python htp_oodar_agent.py ${id} --prog-store
+	@poetry run python dana.py ${id} --prog-store
 
 agent-solve-w-knowledge-and-prog-store:
-	@poetry run python htp_oodar_agent.py ${id} --knowledge --prog-store
+	@poetry run python dana.py ${id} --knowledge --prog-store
 
 agent-solve-w-llama3:
-	@poetry run python htp_oodar_agent.py ${id} --llama3
+	@poetry run python dana.py ${id} --llama3
 
 agent-solve-w-knowledge-w-llama3:
-	@poetry run python htp_oodar_agent.py ${id} --knowledge --llama3
+	@poetry run python dana.py ${id} --knowledge --llama3
 
 agent-solve-w-prog-store-w-llama3:
-	@poetry run python htp_oodar_agent.py ${id} --prog-store --llama3
+	@poetry run python dana.py ${id} --prog-store --llama3
 
 agent-solve-w-knowledge-and-prog-store-w-llama3:
-	@poetry run python htp_oodar_agent.py ${id} --knowledge --prog-store --llama3
+	@poetry run python dana.py ${id} --knowledge --prog-store --llama3
 
 agent-solve-all-combos:
-	@poetry run python htp_oodar_agent.py ${id}
-	@poetry run python htp_oodar_agent.py ${id} --knowledge
-	@poetry run python htp_oodar_agent.py ${id} --prog-store
-	@poetry run python htp_oodar_agent.py ${id} --knowledge --prog-store
-	@poetry run python htp_oodar_agent.py ${id} --llama3
-	@poetry run python htp_oodar_agent.py ${id} --knowledge --llama3
-	@poetry run python htp_oodar_agent.py ${id} --prog-store --llama3
-	@poetry run python htp_oodar_agent.py ${id} --knowledge --prog-store --llama3
+	@poetry run python dana.py ${id}
+	@poetry run python dana.py ${id} --knowledge
+	@poetry run python dana.py ${id} --prog-store
+	@poetry run python dana.py ${id} --knowledge --prog-store
+	@poetry run python dana.py ${id} --llama3
+	@poetry run python dana.py ${id} --knowledge --llama3
+	@poetry run python dana.py ${id} --prog-store --llama3
+	@poetry run python dana.py ${id} --knowledge --prog-store --llama3
 
 
 langchain-react-solve:
