--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1726,7 +1726,7 @@ financebench_id_01902:
   category: 1-COMPARE
   correctness: |-
     the answer either:
-    - identifies Entertainment category/segment as proportionally growing most; or
+    - identifies Entertainment (or Gaming) category/segment as proportionally growing most; or
     - identifies Computing and Mobile Phones category/segment as having highest revenue
 
   evaluator-unreliable: true
