--- a/examples/semiconductor/semiconductor-ui/ui/package.json
+++ b/examples/semiconductor/semiconductor-ui/ui/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "-": "^0.0.1",
     "axios": "^1.7.3",
+    "katex": "^0.16.11",
     "lucide-react": "^0.438.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
