add MarkdownLint to recommended Visual Studio Code extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,8 @@
 
     "charliermarsh.ruff",  // Ruff
 
+    "davidanson.vscode-markdownlint",  // MarkdownLint
+
     "soulcode.vscode-unwanted-recommendations"  // Unwanted Recommendations
   ],
 
