--- a/examples/semiconductor-etching-yieldguard/expertise/expert-programs.yml
+++ b/examples/semiconductor-etching-yieldguard/expertise/expert-programs.yml
@@ -24,3 +24,49 @@ rf-power-fluctuation-monitoring:
         - Inspect the electrodes
         - Adjust gas flow
         - Adjust power settings
+
+
+pressure-instability-monitoring:
+  task: |-
+    Monitor Chamber Pressure fluctuation and recommend inspection/maintenance actions if fluctuation is excessive
+
+  sub-htps:
+    - task: >-
+        What are the values of Chamber Pressure in the recent data?
+
+    - task: |-
+        Analyze whether there are consecutive Chamber Pressure values differing by at least 3%.
+        If so, note down the corresponding wafer batch numbers.
+
+    - task: >-
+        What are the values of Gas Flow Rate in the recent data?
+
+    - task: |-
+        Analyze whether there are consecutive Gas Flow Rate values differing by at least 5%.
+        If so, note down the corresponding wafer batch numbers.
+
+    - task: |-
+        If there are excessive fluctuations in both Chamber Pressure and Gas Flow Rate in the previous analyses,
+        and if the wafer batch numbers contain some same batch(es), report a Pressure Instability problem,
+        and recommend the following maintenance actions:
+        - Preventative chamber cleaning
+        - Adjustment of the gas flow to stabilize pressure
+
+
+chamber-temperature-monitoring:
+  task: |-
+    Monitor Chamber Temperature increases and recommend inspection/maintenance actions if heating is excessive
+
+  sub-htps:
+    - task: >-
+        What are the values of Chamber Temperature in the recent data?
+
+    - task: |-
+        Analyze whether there are 3 consecutive Chamber Temperature values
+        showing increases of at least 2 Celcius degrees per each time step.
+
+    - task: |-
+        If there is/are significant Chamber Temperature increase(s) identified in the previous analysis,
+        recommend the following maintenance actions:
+        - Adjustment of chamber clean frequency
+        - Alerting engineers to check wall lining for polymer build-up
