TypeError: Can't instantiate abstract class DbResource without an implementation for abstract method 'answer'

--- a/examples/use-rdb-resource/pyproject.toml
+++ b/examples/use-rdb-resource/pyproject.toml
@@ -6,12 +6,15 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.12,<3.13"
 pymysql = "^1.1.1"
 kaleido = "0.2.1"
 vanna = "^0.7.3"
 chromadb = "^0.5.11"
 faker = "^30.1.0"
+sqlalchemy = "^2.0.35"
+openai = "^1.51.2"
+openssa = "^0.24.10.10"
 
 
 [build-system]
