--- a/examples/llamarine/expert-program-space.yml
+++ b/examples/llamarine/expert-program-space.yml
@@ -4,10 +4,16 @@ plan:
   
   sub-htps:
     - task: |-
-        Check if situation provided by the user comees from either SOG or STW. The source (SOG or STW), not what user says. determines what the situation is. If the source is specified, meaning the situation is identified, move head with the identified situation. If the source is not specified, move ahead to the next step with 2 possible situations.
+        Identify the input source from the user input: SOG (Speed Over Ground) and STW (Speed Through Water). If the input source is not specified, then accept both possible input sources (SOG vs STW).
         
-    - task: |-    
-        Find the appropriate rules from COLREGs for the possible situations.
+    - task: |-     
+        Determine whether the situation is correct or not based on the input source. If the input source is STW, the situation provided by the user is correct. If the input source is SOG, the situation provided by the user may be incorrect. If the input source is not specified, the situation provided by the user may be incorrect.
 
     - task: |-
-        Give an answer based on the rules from COLREGs.
+        Determine the possible situations based on whether the situation provided by the user is correct or not. If the situation provided by the user is correct, the only possible situation is exactly the situation provided by the user. If the situation provided by the user is incorrect, the possible situations are both Head-on and the situation provided by the user.
+
+    - task: |-
+        Find the most appropriate rule for each possible situation. For example: if the situation is Crossing, then apply the rule 15; if the situation is Head-on, then apply the rule 14.
+
+    - task: |-
+        Recommend the user what to do from the found rules.
