--- a/examples/llamarine/expert-program-space.yml
+++ b/examples/llamarine/expert-program-space.yml
@@ -20,3 +20,9 @@ plan_with_speed_reference_sog:
         Compose to the final answer contains all above outputs.
 
 
+plan_with_speed_reference_stw:
+  task: |-
+    Recommend the user what to do based on the identified situation on radar. Only apply this if specifying STW is being used.
+  sub-htps:
+    - task: |-
+        First tell me all the related rules in COLREGs, then interpret situation from input and let me know the how to apply them in this situation.
