--- a/examples/llamarine/expert-program-space.yml
+++ b/examples/llamarine/expert-program-space.yml
@@ -17,7 +17,7 @@ plan_with_speed_reference_sog:
     - task: |-
         If you sure this is a head on situation, first tell me all the related rules in COLREGs, then let me know the how to apply them in the head on situation.
     - task: |-
-        Compose to the final answer contains all above outputs.
+        Compose to the final answer contains all above outputs and show recommended actions for both crossing and head on situations.
 
 
 plan_with_speed_reference_stw:
