test: update test questions

--- a/examples/llamarine/reference.yml
+++ b/examples/llamarine/reference.yml
@@ -1,7 +1,7 @@
 questions:
-  - What to do when you see a vessel on your starboard side?
-  - What to do when you see a vessel on your port side?
-  - What to do when you see a vessel straight ahead?
+  - A vessel on my port side coming to a crossing situation on my radar. What should I do?
+  - A vessel on my port side coming to a crossing situation on my radar. STW is being used. What should I do?
+  - A vessel on my port side coming to a crossing situation on my radar. SOG is being used. What should I do?
 
 docs:
   - https://www.imo.org/en/About/Conventions/Pages/COLREG.aspx
