build: add pymysql

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,6 +102,7 @@ streamlit-mic-recorder = {version = ">=0.0.8", optional = true}
 
 langchainhub = ">=0.1"
 faiss-cpu = ">=1.8"
+pymysql = "^1.1.1"
 
 [tool.poetry.extras]
 contrib = [
